[tool.poetry]
name = "iOS auto packaging"
version = "0.1.0"
description = "iOS auto packaging python script"
authors = ["s1mple <cd2want@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pbxproj = "^3.4.0"
requests = "^2.27.1"
Authlib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
